# cidr-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
src/: main.rs
