[package]
edition = "2018"
name = "cidr-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
cfg-rs = "^0.3"

[[bin]]
name = "cidr"
path = "src/main.rs"
